@@ -1,3 +1,6 @@
+    - added $all_extra, $hour_extra, $minute_extra,
+      $second_extra and $meridian_extra parameters to
+      html_select_time function (Rainer Collet, Monte)
     - update debug console to print objects (Simon Willison,
       Monte)
     - fix Config_File class to not error when there are no
